--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,6 @@ html, body, .wrapper, .slides, .slides div {
 }
 
 .slides div, .slides div:fullscreen {
-    background-image: -webkit-gradient(
-        radial, 
-        50% 50%, 0, 
-        50% 50%, 1000, 
-        from(rgba(245,245,245,1)), 
-        to(rgba(100,100,100,1))
-    );
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
 }
