--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ html, body, .wrapper, .slides, .slides div {
     font-size: 50px;
 }
 
+.slides div {
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+}
+
 .slides div, .slides div:fullscreen {
     background-color: #4158D0;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
